--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "moment-timezone": "^0.5.43",
     "mongodb": "3.6",
     "mongoose": "^7.5.0",
-    "node-datetime": "^2.1.2"
+    "node-datetime": "^2.1.2",
+    "node-fetch": "^3.3.2"
   }
 }
