--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,15 @@
     "axios": "^1.5.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
+    "moment": "^2.29.4",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.8.4",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-modal": "^3.16.1",
     "react-rainbow-components": "^1.32.0",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
